# Copyright (c) Huawei Technologies Co., Ltd. 2020-2020. All rights reserved
import("//build/lite/config/component/zlite_component.gni")

config("mbedtls_config") {
  include_dirs = [
    "./include",
  ]
}

source_set("mbedtls_source") {
  sources = [
    "library/aes.c",
    "library/aesni.c",
    "library/arc4.c",
    "library/aria.c",
    "library/asn1parse.c",
    "library/asn1write.c",
    "library/base64.c",
    "library/bignum.c",
    "library/blowfish.c",
    "library/camellia.c",
    "library/ccm.c",
    "library/chacha20.c",
    "library/chachapoly.c",
    "library/cipher.c",
    "library/cipher_wrap.c",
    "library/cmac.c",
    "library/ctr_drbg.c",
    "library/des.c",
    "library/dhm.c",
    "library/ecdh.c",
    "library/ecdsa.c",
    "library/ecjpake.c",
    "library/ecp.c",
    "library/ecp_curves.c",
    "library/entropy.c",
    "library/entropy_poll.c",
    "library/error.c",
    "library/gcm.c",
    "library/havege.c",
    "library/hkdf.c",
    "library/hmac_drbg.c",
    "library/md.c",
    "library/md_wrap.c",
    "library/md2.c",
    "library/md4.c",
    "library/md5.c",
    "library/memory_buffer_alloc.c",
    "library/nist_kw.c",
    "library/oid.c",
    "library/padlock.c",
    "library/pem.c",
    "library/pk.c",
    "library/pk_wrap.c",
    "library/pkcs12.c",
    "library/pkcs5.c",
    "library/pkparse.c",
    "library/pkwrite.c",
    "library/platform.c",
    "library/platform_util.c",
    "library/poly1305.c",
    "library/ripemd160.c",
    "library/rsa.c",
    "library/rsa_internal.c",
    "library/sha1.c",
    "library/sha256.c",
    "library/sha512.c",
    "library/threading.c",
    "library/timing.c",
    "library/version.c",
    "library/version_features.c",
    "library/x509.c",
    "library/x509_crt.c",
    "library/xtea.c",
]

configs += [
    ":mbedtls_config",
  ]
}

zlite_component("mbedtls_shared") {
  version = "1.0.0"
  dependences = [ ]
  target_type = "shared_library"
  features = [
    ":mbedtls_source",
  ]

  public_configs = [
    ":mbedtls_config",
  ]
}

 zlite_component("mbedtls_static") {
    version = "1.0.0"
    dependences = [ ]
    target_type = "static_library"
    features = [
        ":mbedtls_source",
    ]

    public_configs = [
        ":mbedtls_config",
    ]
}
